--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ziro</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@400;600&family=Prompt:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -13,22 +14,20 @@
                 <img src="/image/logo.png" alt="Logo Website">
             </div>
             <div class="header-navigation">
-               <a href="#">Home</a>
-               <a href="#">Pricing</a>
-               <a href="#">Blog</a>
-               <a href="#">Become a member</a>
-               <a href="#">About Us</a>
+               <a href="#" class="header-navigaton__tab">Home</a>
+               <a href="#" class="header-navigaton__tab">Pricing</a>
+               <a href="#" class="header-navigaton__tab">Blog</a>
+               <a href="#" class="header-navigaton__tab">Become a member</a>
+               <a href="#" class="header-navigaton__tab">About Us</a>
             </div>
             <div class="header-search">
                 <input type="search" placeholder="Search here ..." class="header-search__input">
-                <a href="#" class="header-search__button">
-                    <img src="/image/search-icon.png" alt="Button Search">
-                </a>
+                <img src="/image/search-icon.png" alt="Button Search" class="header-search__button">
             </div>
             <div class="header-authentication">
-                <a href="#">Login</a>
+                <a href="#" class="header-authentication__tab">Login</a>
                 /
-                <a href="#">Sign Up</a>
+                <a href="#" class="header-authentication__tab">Sign Up</a>
             </div>
         </div>
     </header>
