added section welcome

--- a/index.html
+++ b/index.html
@@ -31,5 +31,35 @@
             </div>
         </div>
     </header>
+    <section class="section-welcome">
+        <div class="section-welcome__content">
+            <div class="section-welcome__info">
+                <div class="section-welcome__text">
+                    <span class="section-welcome__title">Find out talented
+                        <span class="section-welcome__title-detail">freelancer</span> with 
+                        better review faster.
+                    </span>
+                    <span class="section-welcome__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip.
+                    </span>
+                </div>
+                <div class="section-welcome__buttons">
+                    <div class="section-welcome__button">
+                        <a href="#" class="section-welcome__button-detail">Discover Now</a>
+                    </div>
+                    <div class="section-welcome_button-right">
+                        <a href="#" class="section-welcome__tab">
+                            <img src="image/icon-start-stop.png" alt="Icon Button">
+                            <span class="section-welcome__button-text">Watch Now</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="section-welcome__image">
+                <img src="/image/decor-image-welcome.png" alt="Decor Image">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
