added section process

--- a/index.html
+++ b/index.html
@@ -61,5 +61,59 @@
             </div>
         </div>
     </section>
+    <section class="section-logotype">
+        <div class="section-logotype__icons">
+            <img src="image/section-logotype-logo-design.png" alt="logotype for design">
+            <img src="image/section-logotype-logo-branding.png" alt="logotype for branding">
+            <img src="image/section-logotype-logo-greenery.png" alt="logotype for greenery">
+            <img src="image/section-logotype-logo-natural.png" alt="logotype for natural">
+            <img src="image/section-logotype-logo-nature.png" alt="logotype for nature">
+            <img src="image/section-logotype-logo-your-brand.png" alt="logotype for your brand">
+        </div>
+    </section>
+    <section class="section-process">
+        <div class="section-process__content">
+            <div class="section-process__information">
+                <div class="section-process__subtitle">
+                    <span class="section-process__subtitle-text">
+                        How it works
+                    </span>
+                </div>
+                <div class="section-process__title">
+                    <span class="section-process__title-text">
+                        Start find a job you love
+                        with us easily  
+                    </span>
+                </div>
+                <div class="section-process__card">
+                    <span class="section-process__card-number-one">1</span>
+                    <span class="section-process__card-text">Complete Profile</span>
+                    <img src="image/section-process-icon-button.png" alt="Icon Button" class="section-process__icon-one">
+                </div>
+                <div class="section-process__unfolded">
+                    <div class="section-process__unfolded-title">
+                        <span class="section-process__card-number-two">2</span>
+                        <span class="section-process__card-text">Search Vacancies</span>
+                        <img src="image/section-process-icon-button-2.png" alt="icon Button" class="section-process__icon-two">
+                    </div>
+                    <div class="section-process__info">
+                        <span class="section-process__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+                        </span>
+                    </div>
+                </div>
+                <div class="section-process__card">
+                    <span class="section-process__card-number-third">3</span>
+                    <span class="section-process__card-text">Apply Job</span>
+                    <img src="image/section-process-icon-button.png" alt="Icon Button" class="section-process__icon-third">
+                </div>
+            </div>
+            <div class="section-process__images">
+                <img 
+                src="https://s3-alpha-sig.figma.com/img/e3e3/31e2/cabd8cb112b7b89bf7c42a8adc9ad01b?Expires=1730073600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ETJC~6nghT~DC0oF5nO~VyyfNqiO3gqE9Ptk~jNa~IzvPXpvOFg8MIvYH~i52q9FwFRPAFlU7VsYBtFERKiyEdqJ3kfN8E2BszRN8ECZP4e-SEdFKon6QtkfJAOSV1CRLHj2Dkjo-40xGoN~oSgGLl5OpsKA8bKM81GQbTofX4EdjyrE36lJodohMmYbXxQX1OciAJnRex~DNfB7x5vmkcj3~1JEheaoj4Tx1v5YKbGbr2hhX74Z3A~X6GODnImyvKayfFjEn5mTRQsYc5NITIfsxmCbaFmXF85sfK8-D57Xzot-12i8paKW1IkxIv~NPNTlBU7OsyNKu4ng1~h2AQ__" 
+                alt="Image Decor" class="section-process__image">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
