added section advantages

--- a/index.html
+++ b/index.html
@@ -115,5 +115,59 @@
             </div>
         </div>
     </section>
+    <section class="section-advantages">
+       <div class="section-advantages__content">
+            <div class="section-advantages__header">
+                <span class="section-advantages__header-title">
+                    Why Choose Us
+                </span>
+                <span class="section-advantages__header-subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </span>
+            </div>
+                <div class="section-advantages__cards">
+                    <div class="section-advantages__card">
+                        <div class="section-advantages__card-content">
+                            <div class="section-advantages__icon-1">
+                                <img src="image/section-advantages-icon-compas.png" alt="Icon Compas" class="section-advantages__icon">
+                            </div>
+                            <span class="section-advantages__card-title">Trusted</span>
+                            <span class="section-advantages__card-subtitle">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna.
+                            </span>
+                        </div>
+                    </div>
+                    <div class="section-advantages__card-selected">
+                       <div class="section-advantages__card-content">
+                            <div class="section-advantages__icon-2">
+                                <img src="image/section-advantages-icon-compas.png" alt="Icon Compas" class="section-advantages__icon">
+                            </div>
+                            <span class="section-advantages__card-title">Easy to Use</span>
+                            <span class="section-advantages__card-subtitle">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna.
+                            </span>
+                       </div>
+                    </div>
+                    <div class="section-advantages__card">
+                        <div class="section-advantages__card-content">
+                            <div class="section-advantages__icon-3">
+                                <img src="image/section-advantages-icon-compas.png" alt="Icon Compas" class="section-advantages__icon">
+                            </div>
+                            <span class="section-advantages__card-title">Faster</span>
+                            <span class="section-advantages__card-subtitle">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna.
+                            </span>
+                        </div>
+                    </div>
+                </div>
+       </div>
+    </section>
 </body>
 </html>
