added section jobs

--- a/index.html
+++ b/index.html
@@ -169,5 +169,115 @@
                 </div>
        </div>
     </section>
+    <section class="section-jobs">
+        <div class="section-jobs__content">
+            <div class="section-jobs__header">
+                <span class="section-jobs__header-title">
+                    Featured Jobs
+                </span>
+                <span class="section-jobs__header-subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </span>
+            </div>
+            <div class="section-jobs__container">
+                <div class="section-jobs__buttons">
+                    <a href="#" class="section-jobs__button">
+                        <img src="image/section-jobs-icon-arrow-left.png" alt="Icon Button Scroll Left">
+                    </a>
+                    <a href="#" class="section-jobs__button">
+                        <img src="image/section-jobs-icon-arrow-right.png" alt="Icon Button Scroll Right">
+                    </a>
+                </div>
+                <div class="section-jobs__card-selected">
+                    <div class="section-jobs__card-options">
+                        <a href="#" class="section-jobs__card-options-tab">...</a>
+                    </div>
+                    <div class="section-jobs__card-content">
+                        <div class="section-jobs__avatar">
+                            <img src="image/section-jobs-avatar-1.png" alt="Avatar">
+                        </div>
+                        <div class="section-jobs__initials">
+                            <span class="section-jobs__initials-title">Database Programmer</span>
+                            <span class="section-jobs__initials-subtitle">Marraz Team</span>
+                        </div>
+                        <div class="section-jobs__info">
+                            <div class="section-jobs__info-salary">
+                                <img src="image/section-jobs-icon-salary.png" alt="Icon Salary">
+                                <span class="section-jobs__info-text">$14,000 - $25,000 <span class="section-jobs__info-text-details">/monthly</span></span>
+                            </div>
+                            <div class="section-jobs__info-location">
+                                <img src="image/section-jobs-icon-location.png" alt="Icon Location">
+                                <span class="section-jobs__info-text">London,Enlend </span><span class="section-jobs__info-text-details">View map</span>
+                            </div>
+                        </div>
+                        <div class="section-jobs__tabs">
+                            <a href="#" class="section-jobs__tab-left"><img src="image/section-jobs-icon-tab-1.png" alt="Icon Button"></a>
+                            <a href="#" class="section-jobs__tab-right">Apply Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-jobs__card">
+                    <div class="section-jobs__card-options">
+                        <a href="#" class="section-jobs__card-options-tab">...</a>
+                    </div>
+                    <div class="section-jobs__card-content">
+                        <div class="section-jobs__avatar">
+                            <img src="image/section-jobs-avatar-2.png" alt="Avatar">
+                        </div>
+                        <div class="section-jobs__initials">
+                            <span class="section-jobs__initials-title">Database Programmer</span>
+                            <span class="section-jobs__initials-subtitle">Marraz Team</span>
+                        </div>
+                        <div class="section-jobs__info">
+                            <div class="section-jobs__info-salary">
+                                <img src="image/section-jobs-icon-salary.png" alt="Icon Salary">
+                                <span class="section-jobs__info-text">$14,000 - $25,000 <span class="section-jobs__info-text-details">/monthly</span></span>
+                            </div>
+                            <div class="section-jobs__info-location">
+                                <img src="image/section-jobs-icon-location.png" alt="Icon Location">
+                                <span class="section-jobs__info-text">London,Enlend </span><span class="section-jobs__info-text-details">View map</span>
+                            </div>
+                        </div>
+                        <div class="section-jobs__tabs">
+                            <a href="#" class="section-jobs__tab-left"><img src="image/section-jobs-icon-tab-2.png" alt="Icon Button"></a>
+                            <a href="#" class="section-jobs__tab-right">Apply Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-jobs__card">
+                    <div class="section-jobs__card-options">
+                        <a href="#" class="section-jobs__card-options-tab">...</a>
+                    </div>
+                    <div class="section-jobs__card-content">
+                        <div class="section-jobs__avatar">
+                            <img src="image/section-jobs-avatar-1.png" alt="Avatar">
+                        </div>
+                        <div class="section-jobs__initials">
+                            <span class="section-jobs__initials-title">Database Programmer</span>
+                            <span class="section-jobs__initials-subtitle">Marraz Team</span>
+                        </div>
+                        <div class="section-jobs__info">
+                            <div class="section-jobs__info-salary">
+                                <img src="image/section-jobs-icon-salary.png" alt="Icon Salary">
+                                <span class="section-jobs__info-text">$14,000 - $25,000 <span class="section-jobs__info-text-details">/monthly</span></span>
+                            </div>
+                            <div class="section-jobs__info-location">
+                                <img src="image/section-jobs-icon-location.png" alt="Icon Location">
+                                <span class="section-jobs__info-text">London,Enlend </span><span class="section-jobs__info-text-details">View map</span></span>
+                            </div>
+                        </div>
+                        <div class="section-jobs__tabs">
+                            <a href="#" class="section-jobs__tab-left"><img src="image/section-jobs-icon-tab-2.png" alt="Icon Button"></a>
+                            <a href="#" class="section-jobs__tab-right">Apply Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-jobs__actions">
+                <a href="#" class="section-jobs__action">View More</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
