added section feedback

--- a/index.html
+++ b/index.html
@@ -279,5 +279,45 @@
             </div>
         </div>
     </section>
+    <section class="section-feedback">
+        <div class="section-feedback__content">
+            <div class="section-feedback__header">
+                <span class="section-feedback__header-title">What Our Customer Says</span>
+                <span class="section-feedback__header-subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </span>
+            </div>
+            <div class="section-feedback__container">
+                <div class="section-feedback__images">
+                    <img src="image/section-feedback-image.png" alt="Image Fhoto" class="section-feedback__image">
+                    <img src="image/section-feedback-image-details-1.png" alt="Decor" class="section-feedback__image-details">
+                    <img src="image/section-feedback-image-details-2.png" alt="Decor" class="section-feedback__image-detail">
+                </div>
+                <div class="section-feedback__info">
+                    <div class="section-feedback__heading">
+                        <span class="section-feedback__heading-title">William Smith</span>
+                        <span class="section-feedback__heading-subtitle">CEO OF THE LOVE STUDENTS</span>
+                    </div>
+                    <div class="section-feedback__rating">
+                        <img src="image/section-feedback-rating.png" alt="Icon 5 stars">
+                    </div>
+                    <div class="section-feedback__text">
+                        <span class="section-feedback__text-details">
+                            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip.”
+                        </span>
+                    </div>
+                    <div class="section-feedback__footer">
+                        <div class="section-feedback__tabs">
+                            <img src="image/section-feedback-icon-arrow.png" alt="Icon Buttons">
+                        </div>
+                        <div class="section-feedback__icons">
+                            <img src="image/section-feedback-icon-avatar.png" alt="Icon Avatars" class="section-feedback__icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
