added section statistics

--- a/index.html
+++ b/index.html
@@ -319,5 +319,27 @@
             </div>
         </div>
     </section>
+    <section class="section-statistics">
+        <div class="section-statistics__container">
+            <div class="section-statistics__content">
+                <div class="section-statistics__metrics">
+                    <span class="section-statistics__title">36,789</span>
+                    <span class="section-statistics__subtitle">Talented Freelancer</span>
+                </div>
+                <div class="section-statistics__metrics">
+                    <span class="section-statistics__title">45,973</span>
+                    <span class="section-statistics__subtitle">Visitors</span>
+                </div>
+                <div class="section-statistics__metrics">
+                    <span class="section-statistics__title">56,461</span>
+                    <span class="section-statistics__subtitle">Contract Made</span>
+                </div>
+                <div class="section-statistics__metrics">
+                    <span class="section-statistics__title">852k</span>
+                    <span class="section-statistics__subtitle">Companies</span>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
