added section price

--- a/index.html
+++ b/index.html
@@ -341,5 +341,120 @@
             </div>
         </div>
     </section>
+    <section class="section-price">
+        <div class="section-price__content">
+            <div class="section-price__header">
+                <span class="section-price__header-title">Pricing Plan</span>
+                <span class="section-price__header-subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </span>
+            </div>
+            <div class="section-price__cards">
+                <div class="section-price__card">
+                    <div class="section-price__container">
+                        <div class="section-price__heading">
+                            <div class="section-price__label">
+                                <span class="section-price__label-details">FREE</span>
+                            </div>
+                            <div class="section-price__cost">
+                                <span class="section-price__cost-details">$0</span>
+                            </div>
+                            <div class="section-price__period">
+                                <span class="section-price__period-details">Per month</span>
+                            </div>
+                        </div>
+                        <div class="section-price__body">
+                            <div class="section-price__items">
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Lorem ipsum dolor sit amet.</span>
+                                </div>
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Lorem ipsum dolor sit amet.</span>
+                                </div>
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Sed do eiusmod tempor</span>
+                                </div>
+                            </div>
+                            <div class="section-price__buttons">
+                                <a href="#" class="section-price__button">Purchase Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-price__card-selected">
+                    <div class="section-price__container">
+                        <div class="section-price__heading">
+                            <div class="section-price__label">
+                                <span class="section-price__label-details">PREMIUM</span>
+                            </div>
+                            <div class="section-price__cost">
+                                <span class="section-price__cost-details">$175</span>
+                            </div>
+                            <div class="section-price__period">
+                                <span class="section-price__period-details">Per month</span>
+                            </div>
+                        </div>
+                        <div class="section-price__body">
+                            <div class="section-price__items">
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Lorem ipsum dolor sit amet.</span>
+                                </div>
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Ut enim ad minim veniam.</span>
+                                </div>
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Lorem ipsum dolor sit amet.</span>
+                                </div>
+                            </div>
+                            <div class="section-price__button">
+                                <a href="#" class="section-price__button">Purchase Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-price__card">
+                    <div class="section-price__container">
+                        <div class="section-price__heading">
+                            <div class="section-price__label">
+                                <span class="section-price__label-details">PLATNIUM</span>
+                            </div>
+                            <div class="section-price__cost">
+                                <span class="section-price__cost-details">$500</span>
+                            </div>
+                            <div class="section-price__period">
+                                <span class="section-price__period-details">Per month</span>
+                            </div>
+                        </div>
+                        <div class="section-price__body">
+                            <div class="section-price__items">
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Lorem ipsum dolor sit amet.</span>
+                                </div>
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Ut enim ad minim veniam.</span>
+                                </div>
+                                <div class="section-price__item">
+                                    <img src="image/section-price-icon-check-mark.svg" alt="Icon Check Mark">
+                                    <span class="section-price__item-details">Sed do eiusmod tempor</span>
+                                </div>
+                            </div>
+                            <div class="section-price__button">
+                                <a href="#" class="section-price__button">Purchase Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
