--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <img src="/image/logo.png" alt="Logo Website">
             </div>
             <div class="header-navigation">
-               <a href="#" class="header-navigaton__tab">Home</a>
-               <a href="#" class="header-navigaton__tab">Pricing</a>
-               <a href="#" class="header-navigaton__tab">Blog</a>
-               <a href="#" class="header-navigaton__tab">Become a member</a>
-               <a href="#" class="header-navigaton__tab">About Us</a>
+               <a href="#section-welcome" class="header-navigaton__tab">Home</a>
+               <a href="#section-price" class="header-navigaton__tab">Pricing</a>
+               <a href="#section-jobs" class="header-navigaton__tab">Blog</a>
+               <a href="#section-process" class="header-navigaton__tab">Become a member</a>
+               <a href="#section-advantages" class="header-navigaton__tab">About Us</a>
             </div>
             <div class="header-search">
                 <input type="search" placeholder="Search here ..." class="header-search__input">
@@ -31,7 +31,7 @@
             </div>
         </div>
     </header>
-    <section class="section-welcome">
+    <section class="section-welcome" id="section-welcome">
         <div class="section-welcome__content">
             <div class="section-welcome__info">
                 <div class="section-welcome__text">
@@ -71,7 +71,7 @@
             <img src="image/section-logotype-logo-your-brand.png" alt="logotype for your brand">
         </div>
     </section>
-    <section class="section-process">
+    <section class="section-process" id="section-process">
         <div class="section-process__content">
             <div class="section-process__information">
                 <div class="section-process__subtitle">
@@ -115,7 +115,7 @@
             </div>
         </div>
     </section>
-    <section class="section-advantages">
+    <section class="section-advantages" id="section-advantages">
        <div class="section-advantages__content">
             <div class="section-advantages__header">
                 <span class="section-advantages__header-title">
@@ -169,7 +169,7 @@
                 </div>
        </div>
     </section>
-    <section class="section-jobs">
+    <section class="section-jobs" id="section-jobs">
         <div class="section-jobs__content">
             <div class="section-jobs__header">
                 <span class="section-jobs__header-title">
@@ -341,7 +341,7 @@
             </div>
         </div>
     </section>
-    <section class="section-price">
+    <section class="section-price" id="section-price">
         <div class="section-price__content">
             <div class="section-price__header">
                 <span class="section-price__header-title">Pricing Plan</span>
@@ -457,4 +457,74 @@
         </div>
     </section>
 </body>
+<footer class="section-footer">
+    <div class="section-footer__content">
+        <div class="section-footer__container">
+            <div class="section-footer__items">
+                <a href="#" class="section-footer__item-title">Olearn</a>
+                <a href="#" class="section-footer__item">About</a>
+                <a href="#" class="section-footer__item">What we offer</a>
+                <a href="#" class="section-footer__item">Leadership</a>
+                <a href="#" class="section-footer__item">Careers</a>
+            </div>
+            <div class="section-footer__items">
+                <a href="#" class="section-footer__item-title">Courses</a>
+                <a href="#" class="section-footer__item">Classroom Courses</a>
+                <a href="#" class="section-footer__item">Virtual Courses</a>
+                <a href="#" class="section-footer__item">E-Learning Courses</a>
+                <a href="#" class="section-footer__item">Off Line Courses</a>
+            </div>
+            <div class="section-footer__items">
+                <a href="#" class="section-footer__item-title">Community</a>
+                <a href="#" class="section-footer__item">Learner</a>
+                <a href="#" class="section-footer__item">Partners</a>
+                <a href="#" class="section-footer__item">Developers</a>
+                <a href="#" class="section-footer__item">Teaching Centre</a>
+            </div>
+            <div class="section-footer__items">
+                <a href="#" class="section-footer__item-title">Quick Links</a>
+                <a href="#" class="section-footer__item">Home</a>
+                <a href="#" class="section-footer__item">Professional Edu</a>
+                <a href="#" class="section-footer__item">Courses</a>
+                <a href="#" class="section-footer__item">Admissions</a>
+            </div>
+            <div class="section-footer__items">
+                <a href="#" class="section-footer__item-title">More</a>
+                <a href="#" class="section-footer__item">Press</a>
+                <a href="#" class="section-footer__item">Inventors</a>
+                <a href="#" class="section-footer__item">Helps</a>
+                <a href="#" class="section-footer__item">Terms</a>
+            </div>
+        </div>
+        <div class="section-footer__bottom">
+            <div class="section-footer__line"></div>
+            <div class="section-footer__navigations">
+                <div class="section-footer__logo">
+                    <img src="image/section-footer-icon-logo.svg" alt="Logo Icon">
+                </div>
+                <div class="section-footer__tabs">
+                    <a href="#" class="section-footer__tab">Terms of Use</a>
+                    <a href="#" class="section-footer__tab">Protfolio</a>
+                    <a href="#" class="section-footer__tab">Privacy policy</a>
+                    <a href="#" class="section-footer__tab">Contact us</a>
+                    <a href="#" class="section-footer__tab">FAQ</a>
+                </div>
+                <div class="section-footer__socials">
+                    <a href="#" class="section-footer__socials-tab">
+                        <img src="image/section-footer-icon-facebook.svg" alt="Icon Button on Facebook">
+                    </a>
+                    <a href="#" class="section-footer__socials-tab">
+                        <img src="image/section-footer-icon-instagram.svg" alt="Icon Button on Instagram">
+                    </a>
+                    <a href="#" class="section-footer__socials-tab">
+                        <img src="image/section-footer-icon-twitter.svg" alt="Icon Button on Twitter">
+                    </a>
+                    <a href="#" class="section-footer__socials-tab">
+                        <img src="image/section-footer-icon-youtube.svg" alt="Icon Button on YouTube">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
